TEST_PROGRAMS/INVALID/david_rapoport/invalid1.min
# Will add two number, with no semicolons

var i : int
var k : int

read i
read k

print i+k
